Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - host: minikube
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service
            port: 
              number: 4200
---
apiVersion: v1
kind: Service
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 4200
    targetPort: <Target Port>
---
metadata:
  name: myapp
spec:
  selector:
    app: myapp
  ports:
  - port: 4200
    targetPort: 8080
